--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@prisma/client": "^2.28.0",
-    "babel-plugin-module-resolver": "^4.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -34,9 +33,13 @@
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/node": "^7.14.7",
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.15.5",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.15.6",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.4.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^7.29.0",
     "eslint-config-google": "^0.14.0",
