--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "date-fns": "^2.23.0",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -29,6 +30,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "morgan-body": "^2.6.6",
+    "node-cron": "^3.0.0",
     "nodemon": "^2.0.8",
     "npm-run-all": "^4.1.5",
     "swagger-ui-express": "^4.1.6"
