--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.28.0",
+    "celebrate": "^15.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -33,7 +34,8 @@
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.8",
     "npm-run-all": "^4.1.5",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
